--- a/dino/style.css
+++ b/dino/style.css
@@ -12,6 +12,7 @@
   body {
     align-items: center;
     background-image: url(https://rotkiw285.github.io/freemechanik/tapety/IMG_0791.JPG);
+    background-repeat: no-repeat;
     display: flex;
     justify-content: center;
   }
