--- a/221216/style.css
+++ b/221216/style.css
@@ -1,25 +1,35 @@
+:root{
+    padding: 100px;
+    text-align: center;
+    text-decoration: none;
+    align-items: center;
+    font-family: fantasy;
+}
+
 #body{
     position: relative;
     height: 800px;
     width: 500px;
-    border: 3px solid black;
+    border: 7px solid black;
     background-image: url(tlo.png);
     overflow: hidden;
     background-size: cover;
 }
+
 #head{
     position: absolute;
     font-size: 30px;
     color: yellow;
     top: 35px;
     left: 500px;
-    animation-name: text;
+    animation-name: header;
     animation-delay: 0.5s;
     animation-duration: 2s;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
 }
-@keyframes text {
+
+@keyframes header {
     0%{left: -500px;}
     20%{left: -250px;}
     30%{left: -100px;}
@@ -29,19 +39,19 @@
     100%{left: 130px;}
   
 }
-#piwo{
+
+#auto{
     position: absolute;
     scale: 60%;
-    animation-name: piwo;
+    animation-name: wrum;
     animation-delay: 3.5s;
     animation-duration: 2s;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
     left: 300px;
-
-
 }
-@keyframes piwo {
+
+@keyframes wrum {
     0%{left: -800px;}
     25%{left: -600px;}
     50%{left: -400px;}
@@ -49,32 +59,53 @@
     75%{left: -200px;}
     100%{left: -160px;}
 }
+
 #main{
     position: absolute;
     bottom: -800px; 
     left: 120px;
     width: 170px;
-    font-family: fantasy;
-    animation-name: zubr;
+    animation-name: pdu;
     animation-delay: 2.5s;
     animation-duration: 2s;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
     font-size: 35px;
     left: 200px;
-
 }
-@keyframes zubr {
+
+@keyframes pdu {
     0%{left: -800px; bottom: 120px;}
     20%{left: -600px; bottom: 120px;}
     50%{left: -400px; bottom: 120px;}
     60%{left: -200px; bottom: 120px;}
     80%{left: -100px; bottom: 120px;}
-    100%{left: 175px; bottom: 120px;}
+    100%{left: 160px; bottom: 120px;}
 }
 #tekst{
     display: block;
-    text-decoration: none;
-    color: white;
-    text-align: center;
+    color: #0066ff;
+}
+
+#polecam {
+    position: absolute;
+    display: block;
+    color: #ff006a;
+    margin-top: 700px;
+    font-size: 24px;
+    animation-name: polecanko;
+    animation-delay: 2.5s;
+    animation-duration: 4s;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+    left: 3000px;
+}
+
+@keyframes polecanko {
+    0%{left: 110px; bottom: -100px;}
+    20%{left: 110px; bottom: -50px;}
+    50%{left: 110px; bottom: 40px;}
+    60%{left: 110px; bottom: 50px;}
+    80%{left: 110px; bottom: 60px;}
+    100%{left: 110px; bottom: 70px;}
 }
