--- a/230102/style.css
+++ b/230102/style.css
@@ -1,5 +1,5 @@
 *{
-
+overflow: hidden;
 }
 
 .navi{
@@ -12,16 +12,21 @@
 body{
     background-image: url(tlo.png);
 background-repeat: no-repeat;
+height: 1080px;
 }
 
-p{
+.jeden{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: white;
+    animation-name: animatxt;
+    animation-duration: 4s;
+    animation-iteration-count:  infinite;
+    font-size: 24pt;
 }
 
 .miko{
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
     animation-name: anima;
     animation-duration: 7s;
     animation-iteration-count:  infinite;
@@ -30,7 +35,34 @@ p{
 
 @keyframes anima{
     0%{left: 300px; transform: translate(0px, 0px) scale(1) skewX(720deg);}
-    25%{transform: translate(200px, 0px) rotate(360deg) scale(2.5) skewX(720deg);}
+    25%{transform: translate(200px, 0px) rotate(360deg) scale(1.5) skewX(720deg);}
     50%{transform: translate(200px, 200px) scale(0.5) skewX(720deg);}
     75%{transform: translate(0px, 200px);}
     100%{transform: translate(0px,0px);}
+}
+
+
+@keyframes animatxt{
+    0%{transform: translate(0px, 0px);}
+    50%{transform: translate(800px, 0px);}
+    100%{transform: translate(0px, 0px)}
+}
+
+.imgright{
+    float: right;
+    height: 100px;
+    width: 100px;
+}
+}
+
+.imgright img{
+    height: 100px;
+    width: 100px;
+}
+
+
+@keyframes animaright{
+    0%{transform: translate(0px, 0px);}
+    50%{transform: translate(800px, 0px);}
+    100%{transform: translate(0px, 0px)}
+}
