--- a/230207/style.css
+++ b/230207/style.css
@@ -51,12 +51,13 @@ height: 100%;
     height: 50px;
     width: 200px;
     background-color: lawngreen;
-    text-align: center;
     margin: 2px;
     display: flex;
-    flex-direction: row;
     padding: 20px;
     margin: 20px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
 
 }
 
