--- a/230214/style.css
+++ b/230214/style.css
@@ -1,5 +1,5 @@
 *{
-
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .nav{
@@ -7,37 +7,79 @@ width: 100%;
 height: 100px;
 display: flex;
 flex-direction: row;
+justify-content: space-between;
 }
 
 .nav-element{
     height: 50px;
-    justify-content: space-between;
-    width: 50px;
+    width: 200px;
+    margin: 20px;
+    text-align: center;
 
 }
 
 .obraz{
-background-image: url();
+background-image: url(kaletanczyk.jpg);
+height: 100px;
 }
 
 .main{
 width: 100%;
+height: 600px;
+background-color: pink;
+display: flex;
 }
 
 .left-main{
 width: 30%;
+height: 100%;
+display: flex;
+flex-direction: column;
+margin-right: 0;
+background-color: red;
+}
+
+.in-left-main{
+    margin: 20px;
+    height: 50px;
+    width: 300px;
+    background-color: blue;
 }
 
 .right-main{
-width: 70%;
+    width: 70%;
+    background-color: green;
+    height: 600px;
+    display: flex;
+    flex-direction: row;
 }
 
 .in-right-main{
-width: 33%;
+    height: 100%;
+    width: 33.33%;
+    background-color: aquamarine;
+}
+
+.in-right-col{
+    height: 50px;
+    width: 300px;
+    display: flex;
+    margin: 50px;
+}
+
+.ring{
+    border-radius: 50%;
+    height: 100px;
+    width: 100px;
 }
 
 .footer{
+height: 100px;
+text-align: center;
+}
 
+.footer p{
+    margin: 40px;
 }
 
 div{
