--- a/230214/style.css
+++ b/230214/style.css
@@ -1,10 +1,12 @@
 *{
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 width: 1366px;
+margin: 0;
+padding: 0;
 }
 
 a:link, a:visited{
-    color: brown;
+    color: #ffffff;
 }
 
 .nav{
@@ -13,6 +15,7 @@ height: 100px;
 display: flex;
 flex-direction: row;
 justify-content: space-between;
+background-image: url(img/nav.jpg);
 }
 
 .nav-element{
@@ -24,37 +27,35 @@ text-align: center;
 }
 
 .obraz{
-background-image: url(gd.jpg);
+background-image: url(img/bwi.jpg);
 height: 100px;
 }
 
 .main{
 width: 100%;
 height: 600px;
-background-color: pink;
 display: flex;
 }
 
 .left-main{
 width: 30%;
-height: 100%;
+height: 600px;
 display: flex;
 flex-direction: column;
-background-color: red;
+background-color: #E05146;
 justify-content: center;
 }
 
 .in-left-main{
 margin: 20px;
-height: 50px;
+height: 60px;
 width: 350px;
-background-color: blue;
+background-color: #FFB038;
     
 }
 
 .right-main{
 width: 70%;
-background-color: green;
 height: 600px;
 display: flex;
 flex-direction: row;
@@ -63,7 +64,7 @@ flex-direction: row;
 .in-right-main{
 height: 100%;
 width: 33.33%;
-background-color: aquamarine;
+background-color: #C359F7;
 }
 
 .in-right-col{
@@ -78,16 +79,28 @@ border-radius: 50%;
 height: 100px;
 width: 100px;
 margin-left: 110px;
-background-image: url(kaletanczyk.jpg);
 }
 
 .footer{
 height: 100px;
-text-align: center;
+background-color: #8BAB1B;
 }
 
 .footer p{
 margin: 40px;
+text-align: center;
+}
+
+.ring1{
+    background-image: url(img/ring1.jpg);
+}
+
+.ring2{
+    background-image: url(img/ring2.jpg);
+}
+
+.ring3{
+    background-image: url(img/ring3.jpg);
 }
 
 div{
