--- a/230214/style.css
+++ b/230214/style.css
@@ -9,6 +9,14 @@ a:link, a:visited{
     color: #ffffff;
 }
 
+.nav-element:hover, .in-left-main p:hover{
+    color:chartreuse;
+}
+
+p{
+    padding: 20px;
+}
+
 .nav{
 width: 100%;
 height: 100px;
@@ -22,8 +30,6 @@ background-image: url(img/nav.jpg);
 height: 50px;
 width: 200px;
 margin: 20px;
-text-align: center;
-
 }
 
 .obraz{
@@ -50,8 +56,7 @@ justify-content: center;
 margin: 20px;
 height: 60px;
 width: 350px;
-background-color: #FFB038;
-    
+background-color: #ffc164; 
 }
 
 .right-main{
@@ -68,10 +73,11 @@ background-color: #C359F7;
 }
 
 .in-right-col{
-height: 50px;
-width: 200px;
+height: 400px;
+width: 250px;
 display: flex;
-margin: 50px;
+margin: 30px;
+border: none;
 }
 
 .ring{
@@ -87,8 +93,8 @@ background-color: #8BAB1B;
 }
 
 .footer p{
-margin: 40px;
 text-align: center;
+padding-top: 40px;
 }
 
 .ring1{
@@ -101,6 +107,18 @@ text-align: center;
 
 .ring3{
     background-image: url(img/ring3.jpg);
+}
+
+.ring4{
+    background-image: url(img/ring4.jpg);
+}
+
+.ring5{
+    background-image: url(img/ring5.jpg);
+}
+
+.ring6{
+    background-image: url(img/ring6.jpg);
 }
 
 div{
