--- a/230404/style.css
+++ b/230404/style.css
@@ -1,7 +1,7 @@
 #container{
     display: grid;
-    grid-template-columns: repeat(100px, 100px, 100px, 100px, 100px);
-    grid-template-rows: 100px 100px 400px 100px;
+    grid-template-columns: repeat(6,150px);
+    grid-template-rows: repeat(6,150px);
     gap: 5px;
 }
 
@@ -24,13 +24,13 @@
 }
 
 #g3{
-    grid-column: 1/2;
-    grid-row: 3/4;
+    grid-column: 2/5;
+    grid-row: 1/2;
 }
 
 #g4{
-    grid-column: 2/3;
-    grid-row: 3/4;
+    grid-column: 3/5;
+    grid-row: 2/3;
 }
 
 #g5{
@@ -39,8 +39,8 @@
 }
 
 #g6{
-    grid-column: 5;
-    grid-row: 3/5;
+    grid-column: 5/6;
+    grid-row: 3/6;
 }
 
 #g7{
@@ -49,46 +49,46 @@
 }
 
 #g8{
-    grid-column: 1/3;
-    grid-row: 2/3;
+    grid-column: 4/5;
+    grid-row: 4/5;
 }
 
 #g9{
-    grid-column: 1/3;
+    grid-column: 5/6;
     grid-row: 2/3;
 }
 
 #g10{
-    grid-column: 1/3;
-    grid-row: 2/3;
+    grid-column: 5/6;
+    grid-row: 1/2;
 }
 
 #g11{
-    grid-column: 1/3;
-    grid-row: 2/3;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 #g12{
-    grid-column: 1/3;
+    grid-column: 1/2;
     grid-row: 2/3;
 }
 
 #g13{
-    grid-column: 1/3;
-    grid-row: 2/3;
+    grid-column: 1/2;
+    grid-row: 5/6;
 }
 
 #g14{
-    grid-column: 1/3;
-    grid-row: 2/3;
+    grid-column: 2/5;
+    grid-row: 5/6;
 }
 
 #g15{
-    grid-column: 1/3;
-    grid-row: 2/3;
+    grid-column: 2/3;
+    grid-row: 3/4;
 }
 
 #g16{
-    grid-column: 1/3;
+    grid-column: 2/3;
     grid-row: 2/3;
 }
