--- a/230419/style.css
+++ b/230419/style.css
@@ -1,7 +1,25 @@
+*{
+    font-family: sans-serif;
+}
+
 #container{
     display: grid;
-    grid-template-columns: repeat(6,150px);
-    grid-template-rows: repeat(5,150px);
+    grid-template-columns: repeat(5,250px);
+    grid-template-rows: repeat(6,150px);
+    gap: 5px;
+}
+
+a:link, a:visited{
+    color: white;
+}
+
+.grid-container2{
+    display: grid;
+    height: 100%;
+    width: 100%;
+    padding: 70px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     gap: 5px;
 }
 
@@ -13,98 +31,118 @@
     color: white;
 }
 
+.grid-item li{
+    list-style: none;
+}
+
 #g1{
     grid-column: 1/2;
     grid-row: 1/2;
 }
-
 #g2{
     grid-column: 2/3;
     grid-row: 1/2;
 }
-
 #g3{
     grid-column: 3/4;
     grid-row: 1/2;
 }
-
 #g4{
     grid-column: 4/5;
     grid-row: 1/2;
 }
-
 #g5{
     grid-column: 5/6;
     grid-row: 1/2;
 }
-
 #g6{
     grid-column: 1/6;
     grid-row: 2/3;
 }
-
 #g7{
     grid-column: 1/2;
     grid-row: 3/4;
 }
-
 #g8{
-    grid-column: 1/2;
-    grid-row: 3/4;
-}
-#g9{
     grid-column: 1/2;
     grid-row: 4/5;
 }
-#g10{
-    grid-column: 3/4;
+#g9{
+    grid-column: 1/2;
     grid-row: 5/6;
+}
+#g10{
+    grid-column: 2/5;
+    grid-row: 3/6;
 }
 #g11{
-    grid-column: 3/4;
-    grid-row: 5/6;
+    grid-column: 5/6;
+    grid-row: 3/5;
 }
 #g12{
-    grid-column: 3/4;
-    grid-row: 3/4;
+    grid-column: 5/6;
+    grid-row: 5/6;
 }
 #g13{
-    grid-column: 3/4;
-    grid-row: 3/4;
+    grid-column: 1/3;
+    grid-row: 6/7;
 }
 #g14{
+    grid-column: 3/6;
+    grid-row: 6/7;
+}
+
+.g14-left{
+display: flex;
+flex-direction: column;
+justify-content: left;
+align-items: left;
+width: 50%;
+}
+
+.g14-left p{
+    align-items: center;
+    text-align: center;
+}
+
+#a1{
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+#a2{
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+#a3{
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+#a4{
+    grid-column: 1/3;
+    grid-row: 3/4;
+}
+#a5{
+    grid-column: 3/4;
+    grid-row: 1/3;
+}
+#a6{
     grid-column: 3/4;
     grid-row: 3/4;
 }
-#g15{
-    grid-column: 3/4;
-    grid-row: 3/4;
+
+p{
+    align-items: center;
+    text-align: left;
+    margin-left: 40px;
 }
-#g16{
-    grid-column: 3/4;
-    grid-row: 3/4;
+
+input{
+    margin: 10px;
+    margin-left: 40px;
 }
-#g17{
-    grid-column: 3/4;
-    grid-row: 3/4;
-}
-#g18{
-    grid-column: 3/4;
-    grid-row: 3/4;
-}
-#g19{
-    grid-column: 3/4;
-    grid-row: 3/4;
-}
-#g20{
-    grid-column: 3/4;
-    grid-row: 3/4;
-}
-#g21{
-    grid-column: 3/4;
-    grid-row: 3/4;
-}
-#g22{
-    grid-column: 3/4;
-    grid-row: 3/4;
+
+button{
+    margin-right: 40px;
+    align-items: center;
+    text-align: right;
 }
