--- a/230419/style.css
+++ b/230419/style.css
@@ -1,5 +1,7 @@
 *{
     font-family: sans-serif;
+    color: black;
+    margin: 0;
 }
 
 #container{
@@ -7,10 +9,11 @@
     grid-template-columns: repeat(5,250px);
     grid-template-rows: repeat(6,150px);
     gap: 5px;
+    background-color: #6cb397;
 }
 
 a:link, a:visited{
-    color: white;
+    color: black;
 }
 
 .grid-container2{
@@ -27,8 +30,7 @@ a:link, a:visited{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ff0000;
-    color: white;
+    border: 1px solid black;
 }
 
 .grid-item li{
@@ -58,6 +60,9 @@ a:link, a:visited{
 #g6{
     grid-column: 1/6;
     grid-row: 2/3;
+    background-image: url(img/to.jpg);
+    background-size: cover;
+    background-position: center;
 }
 #g7{
     grid-column: 1/2;
@@ -108,26 +113,43 @@ width: 50%;
 #a1{
     grid-column: 1/3;
     grid-row: 1/2;
+    background-image: url(img/do1.png);
+    background-size: cover;
+    background-position: center;
 }
 #a2{
     grid-column: 1/2;
     grid-row: 2/3;
+    background-image: url(img/do2.jpg);
+    background-size: cover;
+    background-position: center;
 }
 #a3{
     grid-column: 2/3;
     grid-row: 2/3;
+    background-image: url(img/do3.jpg);
+    background-size: cover;
 }
 #a4{
     grid-column: 1/3;
     grid-row: 3/4;
+    background-image: url(img/do4.jpg);
+    background-size: cover;
+    background-position: center;
 }
 #a5{
     grid-column: 3/4;
     grid-row: 1/3;
+    background-image: url(img/do5.jpg);
+    background-size: cover;
+    background-position: center;
 }
 #a6{
     grid-column: 3/4;
     grid-row: 3/4;
+    background-image: url(img/do6.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 p{
