--- a/style.css
+++ b/style.css
@@ -9,17 +9,17 @@ html{
     background-color: #2b2b2b; 
     font-family: 'Poppins', sans-serif; 
 }
-
-.text{
+.nav{
+    margin: 15px;
+    padding: 3px;
+    margin-top: 15px;
     display: flex;
-    font-size: 19px;
-    margin: 20px;
-    margin-bottom: 5px;
-    margin-top: 0;
+    justify-content: space-between;
+    list-style: none;
 }
 
-.nav{
-    margin: 10px;
+.nav-list{
+    list-style: none;
 }
 
 .nav a{
@@ -28,39 +28,33 @@ html{
     text-decoration: none;
 }
 
-.nav a:hover, div.gallery p a:hover{
+.nav a:hover, div.gallery a:hover{
     color: #ee810b;
-}
-
-.nav h3{
-    float: right;
-    color: #dfdfdf; 
-    font-size: 13px;
 }
 
 a:link, a:visited{
     color: #dfdfdf;
 }
 
-div.gallery {
 .gallery-container{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
 }
+
+.gallery {
     margin: 5px;
-    float: left;
     width: 370px;
 }
 
-div.gallery img {
+.gallery img {
     width: 100%;
     height: auto;
-    border-radius: 10px;
+    border-radius: 15px;
 }
 
-div.gallery p{
+.gallery p{
     margin-top: 0;
     text-align: center;
     width: 100%;
@@ -69,7 +63,7 @@ div.gallery p{
     border-radius: 1px;
 }
 
-div.gallery p a{
+.gallery p a{
     text-decoration: none;
 }
 
@@ -80,8 +74,20 @@ div.gallery p a{
     margin-bottom: 20px;
 }
 
-@media (max-width: 800px) {
-    .nav h3{
-        display: none;
+.information{
+    color: #dfdfdf;
+    text-align: center;
+    font-size: 21px;
+    margin: 30px;
+    margin: 70px;
+}
+
+@media (max-width: 800px){
+    .nav, .nav-list{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
     }
+    
 }
