--- a/php-table.css
+++ b/php-table.css
@@ -14,11 +14,11 @@ table {
   
   table td, table th {
     padding: 11px 9px;
-    border: 1px solid #d59754;
+    border: 1px solid #f1b26e;
     text-align: center;
     font-size: 13px;
   }
   
 table th {
-    background-color: #e1933f;
+    background-color: #ea9234;
   }
