--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 html{
     background-color: #00000c;
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
 }
 .nav{
     margin: 15px;
@@ -66,28 +67,64 @@ a:link, a:visited{
 }
 
 .gallery {
-    margin: 5px;
-    width: 370px;
-}
-
-.gallery img {
-    width: 100%;
-    height: auto;
-    border-radius: 15px;
-}
-
-.gallery p{
-    margin-top: 0;
-    text-align: center;
-    width: 100%;
-    color: #dfdfdf;
+    margin: 8px;
+    width: 300px;
+    height: 220px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
     background-color: #161624;
-    border-radius: 8px;
 }
 
-.gallery p a{
-    text-decoration: none;
+.gimg{
+    margin: 10px;
+    border-radius: 10px;
+    overflow: hidden;
+    margin: 0 auto;
+    margin-top: 10px;
+    border-radius: 10px;
 }
+
+.gimg img{
+height: 100%;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.gbar{
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+    font-size: 11pt;
+    align-items: center;
+    text-align: center;
+}
+
+.gtext{
+color: white;
+margin: 5px;
+width: 70%;
+text-align: center;
+float: left;
+}
+
+.gbtn{
+    display: flex;
+    padding: 5px;
+    width: 30%;
+}
+
+.gbtn a{
+padding: 5px;
+border-radius: 5px;
+text-decoration: none;
+color: #ee810b;
+}
+
+/* .gbtn a:hover{
+
+} */
 
 .warning{
     color: red;
@@ -112,3 +149,30 @@ a:link, a:visited{
         align-items: flex-start;
     }
 }
+
+@media (max-width: 650px){
+    .gallery{
+        width: 85%;
+        margin: 10px;
+    }
+}
+
+.gbtn:hover {
+    -webkit-animation: rainbow 4s steps(36) infinite;
+  }
+  
+  @-webkit-keyframes rainbow {
+     from { -webkit-filter:hue-rotate(10deg); }
+       to { -webkit-filter:hue-rotate(360deg); }
+  }
+  
+  @keyframes rainbow {
+   from {
+      -webkit-filter:hue-rotate(10deg);
+              filter:hue-rotate(10deg);
+      }
+    to {
+      -webkit-filter:hue-rotate(360deg);
+              filter:hue-rotate(360deg);
+      }
+  }
