--- a/style.css
+++ b/style.css
@@ -125,13 +125,15 @@ float: left;
 
 .gbtn a{
 padding: 5px;
-border-radius: 5px;
+border-radius: 8px;
 text-decoration: none;
 color: #ee810b;
+/* box-shadow: inset 0 0 0 2px #ee810b; */
 }
 
-.gbtn:hover {
-    -webkit-animation: rainbow 4s steps(36) infinite;
+.gbtn a:hover {
+    
+    -webkit-animation: rainbow 3s steps(36) infinite;
 }
 
 @-webkit-keyframes rainbow {
