--- a/php-table.css
+++ b/php-table.css
@@ -1,24 +1,72 @@
 .table-container {
-    margin: 20px 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    padding: 20px;
+  margin: 20px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  padding: 20px;
 }
 
 table {
-    width: 100%;
-    border-collapse: collapse;
-  }
+  width: 100%;
+  border-collapse: collapse;
+}
 
-  table td, table th {
-    padding: 11px 9px;
-    border: 1px solid #f1b26e;
-    text-align: center;
-    font-size: 13px;
-  }
+table td,
+table th {
+  padding: 11px 9px;
+  border: 1px solid #f1b26e;
+  text-align: center;
+  font-size: 13px;
+}
 
 table th {
-    background-color: #ea9234;
+  background-color: #ea9234;
+}
+
+h1 {
+  display: none;
+}
+
+.input-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#searchInput {
+  width: 50%;
+  padding: 8px;
+  font-size: 12px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  margin-top: 10px;
+  background-color: #000;
+  color: #fff;
+}
+
+@media (max-width: 810px) {
+  body {
+    overflow-x: hidden;
   }
+
+  table {
+    width: fit-content;
+  }
+}
+
+@media (max-width: 350px) {
+  h1 {
+    margin-top: 20px;
+    margin: 10px;
+    display: block;
+    color: red;
+    text-align: center;
+    font-size: 16px;
+  }
+
+  .input-container, .table-container {
+    display: none;
+  }
+
+}
