--- a/php-table.css
+++ b/php-table.css
@@ -1,5 +1,5 @@
 .table-container {
-  margin: 20px 0;
+  margin: 0 0 20px 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -65,8 +65,8 @@ h1 {
     font-size: 16px;
   }
 
-  .input-container, .table-container {
+  .input-container,
+  .table-container {
     display: none;
   }
-
 }
