--- a/style.css
+++ b/style.css
@@ -195,6 +195,13 @@ footer {
   margin-top: 20px;
 }
 
+footer a:link, footer a:visited{
+    text-decoration: none;
+}
+footer a:hover{
+  color: #ee810b;
+}
+
 @media (max-width: 810px) {
   .nav,
   .nav-list {
